DXJobPlacement/force-app/main/default/objects/Job_Match__c/Job_Match__c.object-meta.xml
<CustomObject>
    <label>Job Match</label>
    <nameField>
        <label>Job Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Matchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>