DXJobPlacement/force-app/main/default/objects/Job_Match__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Job Matchs</relationshipLabel>
    <relationshipName>Job_Matchs</relationshipName>
    <type>Lookup</type>
</CustomField>