DXJobPlacement/force-app/main/default/objects/Job_Match__c/fields/Job_Listing__c.field-meta.xml
<CustomField>
    <fullName>Job_Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Listing</label>
    <referenceTo>Job_Listing__c</referenceTo>
    <relationshipLabel>Job Matchs</relationshipLabel>
    <relationshipName>Job_Matchs</relationshipName>
    <type>Lookup</type>
</CustomField>