DXJobPlacement/force-app/main/default/objects/Job_Match__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Matchs</relationshipName>
    <type>Lookup</type>
</CustomField>